--- a/js/style.css
+++ b/js/style.css
@@ -1,3 +1,4 @@
+/*! Rotate captcha CSS - v0.0.1 | https://github.com/isszz/rotate-captcha | https://cfyun.cc | Copyright (c) 2021 CFYun | MIT license */
 .captcha {
     position: relative;
     width: 305px;
@@ -25,7 +26,7 @@
 .captcha-image {
     position: relative;
     overflow: hidden;
-    margin: 28px auto 24px;
+    margin: 28px auto;
 }
 .captcha-img {
     position: relative;
@@ -45,6 +46,8 @@
     border-radius: 50%;
     -webkit-background-size: 100% 100%;
     background-size: 100% 100%;
+    -webkit-animation: fadeIn 0.8s forwards;
+    animation: fadeIn 0.8s forwards;
 }
 .captcha-img.captcha-loading img {
     display: none;
@@ -137,6 +140,7 @@
 .captcha-fail .captcha-control-button i {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 1024 1024" version="1.1"><path fill="%23ffffff" d="M384 896a32 32 0 0 1-32-32V160a32 32 0 0 1 64 0v704a32 32 0 0 1-32 32z m257.056 0.128a32 32 0 0 1-32-32v-704a32 32 0 1 1 64 0v704a32 32 0 0 1-32 32zM864 736a32 32 0 0 1-32-32V320a32 32 0 1 1 64 0v384a32 32 0 0 1-32 32zM160 736a32 32 0 0 1-32-32V320a32 32 0 0 1 64 0v384a32 32 0 0 1-32 32z"></path></svg>');
 }
+/* state */
 .captcha-image .captcha-state {
     display: none;
     position: absolute;
@@ -148,41 +152,36 @@
     -webkit-border-radius: 50%;
     border-radius: 50%;
     background: rgba(0,0,0,0.7);
-}
-/* state icon */
-.captcha-image .captcha-state .captcha-state-icon {
-    position: absolute;
-    z-index: 1001;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    -webkit-text-stroke-width: 0.2px;
-    -webkit-font-smoothing: antialiased;
     transform: translate(0, 0);
+    -webkit-animation: fadeIn 0.3s forwards;
+    animation: fadeIn 0.3s forwards;
 }
-.captcha-success .captcha-image .captcha-state,
+.captcha-image .captcha-state .captcha-state-icon-fail,
+.captcha-image .captcha-state .captcha-state-icon-success {
+    display: none;
+}
 .captcha-success .captcha-image .captcha-state,
 .captcha-fail .captcha-image .captcha-state,
-.captcha-fail .captcha-image .captcha-state  {
+.captcha-fail .captcha-image .captcha-state .captcha-state-icon-fail,
+.captcha-success .captcha-image .captcha-state .captcha-state-icon-success {
     display: block;
 }
-.captcha-success .captcha-image .captcha-state .captcha-state-icon:before,
-.captcha-fail .captcha-image .captcha-state .captcha-state-icon:before {
-    content: '';
-    width: 80px;
-    height: 80px;
-    background-repeat: no-repeat;
+/* fade anim */
+@-webkit-keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
-.captcha-success .captcha-image .captcha-state .captcha-state-icon:before {
-	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 1024 1024' version='1.1'><path fill='%23ffffff' d='M887.904 298.208c-12.864-12.064-33.152-11.488-45.216 1.408L415.936 753.984l-233.12-229.696C170.208 511.872 149.952 512 137.536 524.608c-12.416 12.576-12.256 32.864 0.352 45.248l256.48 252.672c0.096 0.096 0.224 0.128 0.32 0.224 0.096 0.096 0.128 0.224 0.224 0.32 2.016 1.92 4.448 3.008 6.784 4.288 1.152 0.672 2.144 1.664 3.36 2.144 3.776 1.472 7.776 2.24 11.744 2.24 4.192 0 8.384-0.832 12.288-2.496 1.312-0.544 2.336-1.664 3.552-2.368 2.4-1.408 4.896-2.592 6.944-4.672 0.096-0.096 0.128-0.256 0.224-0.352 0.064-0.096 0.192-0.128 0.288-0.224l449.184-478.208C901.44 330.592 900.768 310.336 887.904 298.208z'></path></svg>");
-}
-.captcha-fail .captcha-image .captcha-state .captcha-state-icon:before {
-	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 1024 1024" version="1.1"><path fill="%23ffffff" d="M557.312 513.248l265.28-263.904c12.544-12.48 12.608-32.704 0.128-45.248-12.512-12.576-32.704-12.608-45.248-0.128l-265.344 263.936-263.04-263.84C236.64 191.584 216.384 191.52 203.84 204 191.328 216.48 191.296 236.736 203.776 249.28l262.976 263.776L201.6 776.8c-12.544 12.48-12.608 32.704-0.128 45.248 6.24 6.272 14.464 9.44 22.688 9.44 8.16 0 16.32-3.104 22.56-9.312l265.216-263.808 265.44 266.24c6.24 6.272 14.432 9.408 22.656 9.408 8.192 0 16.352-3.136 22.592-9.344 12.512-12.48 12.544-32.704 0.064-45.248L557.312 513.248z"></path></svg>');
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 /* fail anim */
 @-webkit-keyframes horizontal {
@@ -248,4 +247,7 @@
     width: 100%;
     height: 4px;
     background: rgba(0, 0, 0, 0.2);
+}
+/* 屏幕宽度400px以下兼容 */
+@media only screen and (max-width:400px) {
 }
